--- a/package.json
+++ b/package.json
@@ -10,5 +10,26 @@
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@openzeppelin/hardhat-upgrades": "^1.17.0"
-  }
+  },
+  "name": "uups-upgradable-contract",
+  "description": "implementation of 1822 universal upgradable proxy standard",
+  "version": "1.0.0",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/francosion042/UUPS-Upgradable-Contract.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/francosion042/UUPS-Upgradable-Contract/issues"
+  },
+  "homepage": "https://github.com/francosion042/UUPS-Upgradable-Contract#readme"
 }
