--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "compile": "npx hardhat compile"
   },
   "repository": {
     "type": "git",
